🎯 향상된 데이터 업데이트 시스템의 핵심 기능 ✨ 주요 특징:
🔍 스마트 감지: 누락된 날짜/종목 자동 탐지
⚡ 증분 업데이트: 필요한 데이터만 효율적으로 업데이트
🔧 자동 보수: 누락 데이터 자동 복구
⏰ 스케줄링: 완전 자동화된 업데이트
📊 품질 검증: 데이터 무결성 실시간 체크

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,7 @@ plotly>=5.15.0
 requests>=2.31.0
 beautifulsoup4>=4.12.0
 TA-Lib>=0.4.25
-FinanceDataReader>=0.9.50
-sqlite3
+FinanceDataReader  # Removed version constraint for compatibility
 python-dotenv>=1.0.0
 openpyxl>=3.1.0
 scikit-learn>=1.3.0
