--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ pandas>=1.5.0
 numpy>=1.24.0
 plotly>=5.15.0
 requests>=2.31.0
+charset-normalizer>=3.2.0
+chardet>=5.2.0
 beautifulsoup4>=4.12.0
 TA-Lib>=0.4.25
-FinanceDataReader  # Removed version constraint for compatibility
+FinanceDataReader>=0.9.50
 python-dotenv>=1.0.0
 openpyxl>=3.1.0
 scikit-learn>=1.3.0
