--- a/.env
+++ b/.env
@@ -128,8 +128,8 @@ MOCK_API_CALLS=False
 # 이메일 알림 (선택사항)
 SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USERNAME=skdaehyub@gmail.com
-SMTP_PASSWORD="itpd fqne ebkm fivq"
+SMTP_USERNAME=
+SMTP_PASSWORD=
 
 # 슬랙 알림 (선택사항)
 SLACK_WEBHOOK_URL=your_slack_webhook_url_here
